# svode

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  dogfood.json  eslint.config.js  package.json  tsconfig.json
.github/workflows/: build-installers.yml  check.yml  dogfood-update-feed.yml  release.yml
apps/desktop/: components.json  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/messages/: en.json  ru.json
apps/desktop/project.inlang/: settings.json
apps/desktop/scripts/: build-combai-mcp.mjs  build-lfs-dal.mjs  build-svode-mcp.mjs  prepare-sidecar-placeholders.mjs
apps/desktop/src/: index.css  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: combai-mcp-aarch64-apple-darwin  lfs-dal-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_windows.rs  error.rs  lib.rs  macos_fullscreen.rs  main.rs  native_file_drop.rs  process.rs  repo_path.rs  system_path.rs
apps/desktop/src-tauri/src/agent/: claude.rs  commands.rs  executor.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/agent_sessions/: cache.rs  commands.rs  live_status.rs  mod.rs  read_model.rs  reentry.rs  scope.rs  types.rs
apps/desktop/src-tauri/src/agent_sessions/sources/: claude_code.rs  codex.rs  mod.rs
apps/desktop/src-tauri/src/commands/: files.rs  greet.rs  mod.rs  project_openers.rs  space.rs  workspace.rs
apps/desktop/src-tauri/src/commands/files/: collections.rs  entries.rs  schema.rs  structure.rs  tests.rs  tree_links.rs
apps/desktop/src-tauri/src/files/: backlinks.rs  entry.rs  frontmatter.rs  link_fix.rs  mod.rs  nonce.rs  templates.rs  tree.rs  tree_policy.rs  watcher.rs
apps/desktop/src-tauri/src/files/entry/: model.rs  persistence.rs
apps/desktop/src-tauri/src/git/: auth.rs  autocommit.rs  cli.rs  clone.rs  commands.rs  dates.rs  mod.rs  ops.rs  sync.rs
apps/desktop/src-tauri/src/identity/: commands.rs  mod.rs
apps/desktop/src-tauri/src/index/: commands.rs  db.rs  mod.rs  reindex.rs  search.rs  update.rs
apps/desktop/src-tauri/src/mcp/: active.rs  cli.rs  commands.rs  config.rs  error.rs  ipc.rs  mod.rs  path.rs  protocol.rs  service.rs  tools.rs
apps/desktop/src-tauri/src/mcp/service/: collections.rs  context.rs  dispatch.rs  documents.rs  project.rs
apps/desktop/src-tauri/src/properties/: actors.rs  entry_defaults.rs  integrity.rs  mod.rs  model.rs  query.rs  schema_mutations.rs  schema_validation.rs  tests.rs
apps/desktop/src-tauri/src/space/: config.rs  merge.rs  project.rs  registry.rs  scaffold.rs  symlinks.rs  types.rs
apps/desktop/src-tauri/src/storage/: assets.rs  commands.rs  lfs.rs  mod.rs  policy.rs  s3.rs  scope.rs  strategy.rs
apps/desktop/src-tauri/src/terminal/: commands.rs  mod.rs
apps/desktop/src-tauri/src/workspace/: config.rs  merge.rs  mod.rs  project.rs  registry.rs  scaffold.rs  settings.rs  symlinks.rs  types.rs
apps/desktop/src/app/: feature-flags.ts
apps/desktop/src/app/config/: feature-flags.ts
apps/desktop/src/app/providers/: app-providers.tsx  identity-gate.tsx  settings-dialogs.tsx
apps/desktop/src/app/router/: router.tsx
apps/desktop/src/app/shell/: active-space-content.tsx  index.ts  main-layout.tsx  main-surfaces.tsx  project-openers-menu.tsx  project-switcher.tsx  scope-surface-contributions.test.ts  scope-surface-contributions.ts  scope-surface-page.tsx  window-header.tsx
apps/desktop/src/hooks/: use-app-settings.ts  use-app-version.ts  use-debounce.ts  use-fullscreen.ts  use-git-availability.ts  use-keyboard-shortcuts.ts  use-resolved-asset-url.ts  use-upload-file.ts
apps/desktop/src/lib/: media-types.ts  native-file-picker.ts
apps/desktop/src/platform/: build-info.ts  mcp.ts  project-openers.ts  terminal.ts
apps/desktop/src/routes/: __root.tsx  index.tsx  space.tsx  workspace.tsx
apps/desktop/src/stores/: chat.ts  editor.ts  git.ts  layout.ts  space.ts  workspace.ts
apps/desktop/src/types/: git.ts  space.ts  workspace.ts
apps/desktop/tests/: editor-markdown-io.test.ts  editor-programmatic-load.test.ts  entry-field-save.test.ts  space-file-watch-events.test.ts  space-scope-collapse.test.ts  space-store-open.test.ts  space-tree-cache.test.ts  space-tree-patches.test.ts
crates/lfs-dal/: Cargo.toml
crates/lfs-dal/src/: main.rs
scripts/: update-dogfood-feed.mjs
(+951 files in other folders)
