[package]
name = "combai-desktop"
version = "0.0.3"
authors = ["Kamnev Ilya"]
edition = "2024"
repository = "https://github.com/venmakli/combai"

[lib]
name = "combai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde_yml = "0.0.12"
notify = "7"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
which = "7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = "3"
