[package]
name = "svode"
version = "0.0.6"
authors = ["Kamnev Ilya"]
edition = "2024"
repository = "https://github.com/venmakli/svode"
default-run = "svode"

[lib]
name = "svode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "svode-mcp"
path = "src/bin/svode-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde_yml = "0.0.12"
notify = "7"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
which = "7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
opendal = { version = "0.55", features = ["services-s3"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
portable-pty = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPasteboard", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSString", "NSURL", "std"] }

[dev-dependencies]
tempfile = "3"
